@@ -6,16 +6,16 @@ RunInTerminal=true
 ShowLocals=true
 
 [filenumbers]
-0=4
-1=4
-2=4
-3=5
-4=5
-5=5
-6=4
-7=12
+0=6
+1=15
+2=872
+3=188
+4=14
+5=1
+6=37
+7=1
 8=16
-9=18
+9=13
 10=21
 11=1
 
@@ -42,14 +42,8 @@ filter.dir.ignore.hidden=0
 clean before build=false
 
 [filelist]
-0=/home/sf/Devel/galculator/src/callbacks.c
-1=/home/sf/Devel/galculator/src/general_functions.h
-2=/home/sf/Devel/galculator/src/parser.h
-3=/home/sf/Devel/galculator/src/calc_basic.h
-4=/home/sf/Devel/galculator/src/parser.c
-5=/home/sf/Devel/galculator/src/calc_basic.c
-6=/home/sf/Devel/galculator/src/galculator.h
-7=/home/sf/Devel/galculator/TODO
+0=/home/sf/Devel/galculator/ChangeLog
+1=/home/sf/Devel/galculator/TODO
 
 [Project Tree]
 0=0
@@ -71,11 +65,11 @@ clean before build=false
 7=display_result_get_double
 
 [find_text]
-0=menu
-1=set_all_buttons_pr
-2=GtkMenu
-3=unknownqq
-4=formula
-5=ai:
-6=old_status
-7=fprintf
+0=current_status
+1=strtod
+2=parse:
+3=compute_expression
+4=current_token
+5=s_cb_token
+6=number.
+7=menu
