@@ -1,6 +1,5 @@
 /*
  *  parser.c - string parser to feed calc_basic.c
- *
  *	part of galculator
  *  	(c) 2002-2004 Simon Floery (chimaira@users.sf.net)
  *
@@ -28,14 +27,19 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
+#include <ctype.h>
 #include <math.h>
 #include <glib.h>
 
 #include "parser.h"
-
 #include "calc_basic.h"
+#include "galculator.h"
 
-gboolean is_operation (char operation_char, char last_char)
+/* is_operation. determines on behalf of current and previous character if 
+ * current one is an operation.
+ */
+ 
+static gboolean is_operation (char operation_char, char last_char)
 {
 	/* '-' could also be part of a signed number */
 	if (operation_char == '-')
@@ -44,6 +48,28 @@ gboolean is_operation (char operation_char, char last_char)
 	else
 		return !(strchr(OPERATION_CHARS, operation_char) == NULL);
 }
+
+/* remove_whitespaces. remove any whitespaces from input. returns new string
+ * length.
+ */
+
+int remove_whitespaces (char *string)
+{
+	int 	string_counter=0, new_string_counter=0;
+	
+	while (string[string_counter] != '\0') {
+		if (!isspace(string[string_counter])) {
+			string[new_string_counter] = string[string_counter];
+			new_string_counter++;
+		}
+		string_counter++;
+	}
+	string[new_string_counter] = '\0';
+	return new_string_counter;
+}
+
+/* identify_function. tries to match given string to a function
+ */
 
 static double (*identify_function (char *string))(double)
 {
@@ -71,12 +97,29 @@ static double (*identify_function (char *string))(double)
 	return map[counter].function;
 }
 
-/* identify_number.
+/* identify_constant. check, if string is a constant.
+ */
+
+static char *identify_constant (char *string)
+{
+	int 	counter = 0;
+	
+	while (constant[counter].name != NULL) {
+		if (strcmp (constant[counter].name, string) == 0)
+			return constant[counter].value;
+		counter++;
+	}
+	return NULL;
+}
+
+/* identify_number. number refers here to anything not an operation. number may
+ * be an empty string, a function or really a number.
  */
 
 static u_number identify_number (char *string, char current_operation, double default_value)
 {
 	char 		*endptr;
+	char		*constant_string;
 	u_number	return_value;
 	
 	if (strlen(string) == 0) {
@@ -87,8 +130,13 @@ static u_number identify_number (char *string, char current_operation, double de
 		return_value.value = default_value;
 		return return_value;
 	}
+	/* now: at first, let's have a look if it's a function */
 	if ((return_value.func = identify_function (string)) == NULL) {
-		return_value.value = strtod (string, &endptr);
+		/* then, if it's a constant */
+		if ((constant_string = identify_constant (string)) != NULL)
+			return_value.value = strtod (constant_string, &endptr);
+		/* and last if it is a number */
+		else return_value.value = strtod (string, &endptr);
 		if ((endptr) && (*endptr != '\0')) 
 			fprintf (stderr, "error [id_nr] : %s\n", string);
 	}
@@ -107,7 +155,7 @@ double parse_string(const char *input_string)
 	double 		result=0.;
 	
 	string = g_strdup_printf ("%s=", input_string);
-	string_length = strlen(string);
+	string_length = remove_whitespaces (string);
 	number = string;
 	for (counter = 0; counter < string_length; counter++) {
 		/* current character is an operation BUT not a minus sign 
@@ -129,6 +177,7 @@ double parse_string(const char *input_string)
 	return result;
 }
 
+/*
 int main (int argc, char *argv[])
 {
 	char 	*string2parse;
@@ -141,3 +190,4 @@ int main (int argc, char *argv[])
 	} while (strlen(string2parse) > 1);
 	return 0;
 }
+*/
