@@ -26,6 +26,8 @@ typedef struct {
 	double	(*function)(double);
 } s_string_func_pair;
 
-#define OPERATION_CHARS "+-*/=()"
+#define OPERATION_CHARS "+-*/^=()%"
+
+double parse_string(const char *input_string);
 
 #endif	/* parser.h */
